--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,15 @@
 @charset "utf-8";
-/*div{
-	border: 1px solid red;
-	margin: 5px;
-}
-*/
 
-.datosPersonales{
-	display: block;
-}
-/*
-canvas{
-	border: 2px solid red;
-
+/**{
+	border: 1px solid #f00;
 }*/
-
-#horarioDefinido{
+#horarioDefinido, #encabezadoConsulta{
 	text-align: center;
 }
 
 hgroup{
 	text-align: center;
+	margin-bottom: 20px;
 }
 
 .formulario hgroup h1{
@@ -34,14 +24,61 @@ body{
 }
 #contenedor{
 	margin: 10px auto;
-	width: 550px;
+	width: 650px;
+
+}
+
+#contenedorCrearEnlace{
+	margin: 10px auto;
+	width: 450px;
 }
 
 
-#formulario{
+#formulario, #formularioEnlace{
 	background-color: #d2d2d2;
-	margin-top: -20px;
-	padding: 40px;
+	margin-top: -10px;
+	padding: 20px 40px;
+	border: 3px solid #ff8a00;
+}
+
+#formularioConsulta{
+	background-color: #d2d2d2;
+	margin: auto;
+	margin-top: 20px;
+	border: 3px solid #ff8a00;
+	width: 500px;
+	padding: 20px 0;
+
+}
+
+fieldset{
+	border-color: #55A900;
+	width: 400px;
+	margin: auto;
+	padding: 0 10px;
+
+}
+#enlaceFieldset{
+	border-color: #55A900;
+	width: 380px;
+	margin-left: -20px;
+	padding: 20px 10px;
+}
+
+.datosPersonales{
+	display: block;	
+	width: 380px;
+}
+
+.datosEnlace{
+	display: block;
+	width: 350px;
+	padding-left: 40px;
+}
+.datosConsulta{
+	display: block;
+	width: 350px;
+	margin-top: 20px;
 }
 
 .campo{
@@ -50,33 +87,33 @@ body{
 	margin-top: 10px;
 	margin-bottom: 10px;
 	padding: 10px;
-	width: 400px;
+	width: 380px;
 	font-size: 14px;
-
 	border-radius: 3px;
 }
 
-#seleccionHoras{
+#cantidadGrupos{
+	width: 100px;
+}
+.cantidadGrupos{
 	text-align: center;
-}
-
-.diasLabel{
-	display: inline-block;	
-	width: 100px;
-	text-align: right;
-	font-size: 20px;
-	
-}
-.horas{
-	width: 100px;
-	-webkit-width: 100px;
-	-moz-width: 100px;
-
-	font-size: 20px;
-	-webkit-font-size: 20px;
-	-moz-font-size: 20px;
 
 }
+
+.campoEnlace{
+	background: #eee;
+	border: 0;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding: 10px;
+	margin-left: 40px;
+	width: 280px;
+	font-size: 14px;
+	border-radius: 3px;
+}
+
+
+
 .boton{
 	background: #ff8a00;
 	color: #ffffff;
@@ -84,12 +121,38 @@ body{
 	border: 0;
 	padding: 10px;
 	width: 250px;
-	margin-left: 120px; /*los botones no s pueden centrar asi que ponemos una margen*/
+	margin-left: 165px; /*los botones no s pueden centrar asi que ponemos una margen*/
 	margin-top: 20px;
 	border-radius: 3px;
 }
 
-#botonImprimir{
+#botonEnlace{
+	background: #ff8a00;
+	color: #ffffff;
+	font-size: 14px;
+	border: 0;
+	padding: 10px;
+	width: 250px;
+	margin-left: 65px; /*los botones no s pueden centrar asi que ponemos una margen*/
+	margin-top: 20px;
+	border-radius: 3px;
+}
+
+.botonConsulta{
+	background: #ff8a00;
+	color: #ffffff;
+	font-size: 14px;
+	border: 0;
+	padding: 10px;
+	width: 200px;
+	margin-left: 100px;
+	margin-bottom: 20px;
+	margin-top: 20px;
+	border-radius: 3px;
+	
+}
+
+#botonImprimir, #botonRegresar{
 	background: #ff8a00;
 	color: #ffffff;
 	font-size: 14px;
@@ -97,25 +160,172 @@ body{
 	padding: 10px;
 	width: 150px;
 	/*margin-left: 120px; los botones no s pueden centrar asi que ponemos una margen*/
-	margin-top: 20px;
+	margin-top: 20px auto;
 	border-radius: 3px;
 }
 
-#botonImprimir:hover{
+#botonImprimir:hover, #botonRegresar:hover, .boton:hover, .botonConsulta:hover, #botonEnlace:hover{
 	background-color: #21610B;
-
+	cursor: pointer;
 }
 
-
-fieldset{
-	border-color: #55A900;
+#menu{
+	margin-left: -40px;
+	background-color: #21610B;
+	text-align: right;
+	margin-top: -20px;
+	margin-right: -8px;
 }
+
+#menu ul li{
+	list-style: none;
+	display: inline-block;
+	padding: 20px 10px;
+	margin-left: -25px;
+	
+}
+#menu ul li a{
+	text-decoration: none;
+	border: 1px;
+	color:#ffffff;
+	padding: 20px 10px;
+	margin-left: 10px;
+	margin-right: -10px;
+}
+#menu ul li a:hover{
+	background-color: #ff8a00;
+}
+
+#botonImprimir:active, #botonRegresar:active, .boton:active, .botonConsulta:active, #botonEnlace:active, #menu ul li a:active{
+	color:#000000;
+}
+
 
 .horarioDefinido{
 	width: 800px;
 	margin: auto;
 
 }
+
+#tablaSeleccion, #tablaConsulta, #tablaTitulos, #tablaDibujo{	
+
+	border-collapse: collapse;
+	border: 1px solid #55A900;
+	margin: 20px auto;
+	width: 550px;
+	font-size: 14px;
+	
+	
+}
+
+#tablaTitulos, #tablaSeleccion{
+	margin-left: 0;
+}
+#tablaGrupos{
+	border-collapse: collapse;
+	border: 1px solid #55A900;
+	margin: 20px auto;
+	width: 1200px;
+	font-size: 10px;
+}
+
+#tablaSeleccion tr th, #tablaConsulta tr th, #tablaTitulos tr th, #tablaDibujo tr th, #tablaGrupos tr th{
+	background-color: #ff8a00;
+	color: #ffffff;
+	font-weight: normal;
+}
+
+#tablaSeleccion tr, #tablaConsulta tr, #tablaTitulos tr, #tablaDibujo tr{
+	text-align: center;
+
+}
+#tablaSeleccion tr:hover{
+	background-color: #ffffff;
+}
+#tablaSeleccion td:hover{
+	background-color: #ff8a00;
+
+
+}
+
+#tablaSeleccion td, th, #tablaConsulta td, th, #tablaTitulos td, th, #tablaGrupos td, th{
+	border: 1px solid #55A900;
+	padding: 5px;
+}
+
+#tablaDibujo td, th{
+	border: 1px solid #55A900;
+}
+
+#tablaDibujo .resaltado, #tablaGrupos .resaltado{
+	background-color: #2293B0;
+	color: white;
+	font-weight: normal;
+	font-style: italic;
+	text-transform: uppercase;
+}
+
+#tablaTitulos{
+	margin-bottom: -30px;
+}
+
+#tablaSeleccion{
+	margin-top: -30px;
+}
+
+
+#contenedorTabla{
+	height: 300px;
+	/*border: 1px solid red;*/
+	overflow-y: scroll;
+
+}
+#contenedorTitulos{
+	/*border: 1px solid red;*/
+	overflow-y: hidden;	
+}
+
+.padre{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	flex-flow: column-reverse;
+}
+.hijoBoton, .hijoFrase{
+	margin:auto;
+}
+
+#grupoTitulos .titulo{
+	margin-bottom: -20px;
+}
+
+#nombrePrograma{
+	text-transform: uppercase;
+}
+
+
+#grupoTitulos{
+	margin-bottom: 30px;
+}
+
+#tablesContainer{
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+figure{
+	text-align: center;
+}
+
+figure #imagenMosaico{
+	width: 900px;
+}
+
+#sch{
+	color: #ff8a00;
+}
+
 footer{
 	color: #E6E6E6;
 }
